# stacktrace-test

./: CMakeLists.txt  README.md  main.cpp
src/: common.h  crashreporter.cpp  crashreporter.h  crashreportwidget.cpp  crashreportwidget.h  crashreportwidget.ui  main.cpp  mainwidget.cpp  mainwidget.h  mainwidget.ui  signalhandler.cpp  signalhandler.h
